# WordCounter

./: CMakeLists.txt  README.md  config.cfg  launcher.py  main.cpp  wordCountLauncher.py
ThreadPool/: Worker.cpp  Worker.h
data/: big_alphabet_order.txt  big_count_order.txt  test.txt
include/: ConfigParameters.h  FileWordCounter.h  ResultSaver.h  StringWordCounter.h
src/: ConfigParameters.cpp  FileWordCounter.cpp  ResultSaver.cpp  StringWordCounter.cpp
tests/: FileWordCounter.Test.cpp  StringWordCounter.Test.cpp  ThreadPool.Test.cpp  Worker.Test.cpp
